# Hermit

./: .gitignore  Cargo.toml  README.md
dep-installer-hack/: Cargo.toml  Shuttle.toml  build.rs
dep-installer-hack/src/: main.rs
src/: bot.rs  helper.rs  main.rs
src/commands/: general.rs  help.rs  mod.rs  music.rs
src/services/: joke.rs  meme.rs  mod.rs
