[package]
name = "thehermit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.32.0"
shuttle-runtime = "0.32.0"
serenity = { version = "0.11.5", default-features = false, features = [
    "client", "gateway", "rustls_backend", "model","cache","builder","standard_framework","voice"
]}
shuttle-secrets = "0.32.0"
tokio = "1.26.0"
tracing = "0.1.37"
reqwest = { version = "0.11.22", features = ["json"] }

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "current"
features = ["yt-dlp"]

