[package]
name = "thehermit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
dotenv = "0.15.0"
poise = "0.6.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.218"
serenity = { version = "0.12", default-features = false, features = [
    "client", "gateway", "rustls_backend", "model","cache","builder","voice"
]}
songbird = "0.5.0"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"


